--- a/package.json
+++ b/package.json
@@ -214,21 +214,21 @@
     "extract-intl:doc"
   ],
   "dependencies": {
-    "async": "2.6.0",
-    "babel-core": "6.26.0",
+    "async": "^2.6.0",
+    "babel-core": "^6.26.0",
     "classnames": "^2.2.5",
-    "directory-tree": "2.0.0",
-    "git-cli-upgrade-tool": "0.0.9",
-    "glob": "7.1.2",
-    "kopaxgroup-cli-helpers": "0.0.3",
-    "node-map-directory": "0.1.0",
-    "rimraf": "2.6.2",
-    "shelljs": "0.8.1",
-    "yargs": "11.0.0",
-    "prop-types": "15.6.1",
-    "react-transition-group": "2.3.1",
-    "bootstrap-styled": "1.6.0",
-    "reselect": "3.0.1"
+    "directory-tree": "^2.0.0",
+    "git-cli-upgrade-tool": "^0.0.9",
+    "glob": "^7.1.2",
+    "kopaxgroup-cli-helpers": "^0.0.3",
+    "node-map-directory": "^0.1.0",
+    "rimraf": "^2.6.2",
+    "shelljs": "^0.8.1",
+    "yargs": "^11.0.0",
+    "prop-types": "^15.6.1",
+    "react-transition-group": "^2.3.1",
+    "bootstrap-styled": "^1.6.1",
+    "reselect": "^3.0.1"
   },
   "peerDependencies": {
     "react": "^16.3.2",
