--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bootstrap-styled-toggle",
-  "version": "0.1.2",
+  "version": "0.0.0-development",
   "description": "Toggle option made with bootstrap and optionaly use react-intl or any other ui component",
   "main": "lib/index.js",
   "jsnext:main": "dist/bootstrap-styled-toggle.es.js",
