fix(ci): fix build

--- a/package.json
+++ b/package.json
@@ -267,6 +267,7 @@
   "publishConfig": {
     "tag": "latest"
   },
+  "private": false,
   "release": {
     "branch": "master",
     "success": false,
