--- a/.npmignore
+++ b/.npmignore
@@ -3,9 +3,18 @@ sonar-project.properties
 .gitlab-ci.yml
 .travis.yml
 .npmrc
+.babelrc
 CONTRIBUTING.md
 CODE_OF_CONDUCT.md
 CHANGELOG.md
 internals
 babel.config.js
 babel.ext.json
+README.md
+text-report.xml
+.idea
+coverage
+docs/
+reports/
+/styleguide
+bundle-stats.html
