--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build:dist:watch": "rollup -c --watch",
     "build:lib:watch": "npm run build:lib -- --watch",
     "test": "npm run lint && npm run test:web",
-    "test:web": "NODE_ENV=test TEST_REPORT_PATH=reports jest --coverage",
+    "test:web": "NODE_ENV=test jest --coverage",
     "test:clean": "rimraf ./coverage",
     "test:watch": "npm run test -- --watch",
     "lint": "eslint src",
@@ -40,12 +40,6 @@
   "bugs": {
     "url": "https://github.com/bootstrap-styled/toggle/issues"
   },
-  "files": [
-    "LICENSE.md",
-    "dist",
-    "lib",
-    "bin"
-  ],
   "keywords": [
     "bootstrap",
     "bootstrap-styled",
@@ -259,6 +253,11 @@
       "raf/polyfill"
     ],
     "setupTestFrameworkScriptFile": "<rootDir>/internals/testing/test-bundler.js"
+  },
+  "jestSonar": {
+    "reportPath": "reports",
+    "reportFile": "test-report.xml",
+    "indent": 2
   },
   "translation": {
     "locale": "en",
