--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "jsnext:main": "dist/@bootstrap-styled/toggle.es.js",
   "module": "dist/@bootstrap-styled/toggle.es.js",
   "homepage": "https://bootstrap-styled.github.io/toggle",
+  "engines": {
+    "node": ">=8"
+  },
   "browserslist": [
     "IE >= 9",
     "last 2 versions"
@@ -129,76 +132,77 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-external-helpers": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-decorators": "^7.0.0",
-    "@babel/plugin-proposal-json-strings": "^7.0.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-syntax-import-meta": "^7.0.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.0.0",
-    "@babel/plugin-transform-react-constant-elements": "^7.0.0",
-    "@babel/plugin-transform-react-inline-elements": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/cli": "^7.2.0",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-external-helpers": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.2.1",
+    "@babel/plugin-proposal-decorators": "^7.2.2",
+    "@babel/plugin-proposal-json-strings": "^7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-syntax-import-meta": "^7.2.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
+    "@babel/plugin-transform-react-constant-elements": "^7.2.0",
+    "@babel/plugin-transform-react-inline-elements": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
+    "@bootstrap-styled/documentation": "^1.2.0",
+    "@rollup-umd/documentation": "^1.3.0",
     "@semantic-release/changelog": "^3.0.1",
-    "@semantic-release/exec": "^3.3.0",
+    "@semantic-release/exec": "^3.3.1",
     "@semantic-release/git": "^7.0.5",
-    "@semantic-release/github": "^5.2.1",
-    "@semantic-release/npm": "^5.1.1",
-    "@yeutech-lab/rollup-umd-documentation": "^2.4.5",
+    "@semantic-release/github": "^5.2.6",
+    "@semantic-release/npm": "^5.1.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.4.2",
-    "babel-loader": "^8.0.0",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.4",
     "babel-plugin-add-module-exports": "^1.0.0",
     "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-plugin-react-intl": "^3.0.1",
     "babel-plugin-react-transform": "^3.0.0",
-    "babel-plugin-styled-components": "^1.5.1",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
+    "babel-plugin-styled-components": "^1.9.4",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.21",
     "cz-conventional-changelog": "^2.1.0",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
     "eslint": "^5.10.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
     "exports-loader": "^0.7.0",
     "gulp": "^4.0.0",
-    "istanbul-api": "2.0.6",
-    "istanbul-reports": "2.0.1",
+    "istanbul-api": "^2.0.6",
+    "istanbul-reports": "^2.0.1",
     "jest-cli": "^23.6.0",
     "jest-sonar-reporter": "^2.0.0",
     "lint-staged": "^8.1.0",
     "pre-commit": "^1.2.2",
-    "raf": "^3.4.0",
-    "react": "^16.3.2",
+    "raf": "^3.4.1",
+    "react": "^16.6.3",
     "react-intl": "^2.7.2",
     "react-redux": "^6.0.0",
-    "react-styleguidist": "^8.0.4",
-    "react-test-renderer": "^16.3.2",
+    "react-styleguidist": "^8.0.6",
+    "react-test-renderer": "^16.6.3",
     "redux": "^4.0.1",
     "rollup": "^0.68.0",
-    "rollup-plugin-babel": "^4.0.1",
+    "rollup-plugin-babel": "^4.1.0",
     "rollup-plugin-cleanup": "^3.0.0",
-    "rollup-plugin-commonjs": "^9.1.0",
-    "rollup-plugin-inject": "^2.0.0",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-inject": "^2.2.0",
     "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^4.0.0",
-    "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-uglify": "^6.0.0",
+    "rollup-plugin-replace": "^2.1.0",
+    "rollup-plugin-terser": "^3.0.0",
     "rollup-plugin-visualizer": "^0.9.2",
     "rollup-watch": "^4.3.1",
-    "semantic-release": "^15.12.1",
+    "semantic-release": "^15.13.0",
     "sinon": "^7.2.2",
-    "styled-components": "^4.1.1",
+    "styled-components": "^4.1.2",
     "toctoc": "^0.3.2",
-    "webpack": "^4.16.1"
+    "webpack": "^4.27.1"
   },
   "lint-staged": {
     "*.js": [
@@ -213,14 +217,14 @@
     "extract-intl:doc"
   ],
   "dependencies": {
-    "@bootstrap-styled/v4": "^1.2.6",
-    "prop-types": "^15.6.1"
+    "@bootstrap-styled/v4": "^1.3.0",
+    "prop-types": "^15.6.2"
   },
   "peerDependencies": {
-    "react": "^16.3.2",
-    "styled-components": "^4.1.1",
+    "react": "^16.6.3",
+    "styled-components": "^4.1.2",
     "redux": "^4.0.1",
-    "react-redux": "^5.1.1"
+    "react-redux": "^6.0.0"
   },
   "jest": {
     "testURL": "http://localhost",
